--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -97,12 +97,14 @@ jobs:
           # Fix for linker error with Arduino core for ESP32 v2.0.x as suggested in https://github.com/mcci-catena/arduino-lmic/issues/714#issuecomment-822051171
           echo "#define hal_init LMICHAL_init" >> /home/runner/Arduino/libraries/MCCI_LoRaWAN_LMIC_library/project_config/lmic_project_config.h
       
-      - name: Copy secrets.h from secrets.h-template
+      - name: Copy secrets.h from secrets.h.template
         if: ${{ env.run-build == 'true' }}
         run:
           |
-          cp /home/runner/work/arduino-lorawan/examples/arduino_lorawan_esp32_example/secrets.h.template \
-          /home/runner/work/arduino-lorawan/examples/arduino_lorawan_esp32_example/secrets.h
+          pwd
+          ls
+          cp /home/runner/work/arduino-lorawan/arduino-lorawan/examples/arduino_lorawan_esp32_example/secrets.h.template \
+          /home/runner/work/arduino-lorawan/arduino-lorawan/examples/arduino_lorawan_esp32_example/secrets.h
       
       - name: Build sketch
         if: ${{ env.run-build == 'true' }}
