--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -78,7 +78,8 @@ jobs:
             arduino-cli lib install "$i"
           done
           # Clone mcci-catena's fork of Adafruit_BME280_Library used in the example simple_sensor_bme280
-          gh repo clone mcci-catena/Adafruit_BME280_Library
+          #gh repo clone mcci-catena/Adafruit_BME280_Library
+          gh clone https://github.com/mcci-catena/Adafruit_BME280_Library.git 
           cp -r Adafruit_BME280_Library /home/runner/Arduino/libraries/
 
       - name: Install platform
