--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -79,7 +79,7 @@ jobs:
           done
           # Clone mcci-catena's fork of Adafruit_BME280_Library used in the example simple_sensor_bme280
           #gh repo clone mcci-catena/Adafruit_BME280_Library
-          gh repo clone https://github.com/mcci-catena/Adafruit_BME280_Library.git 
+          git clone https://github.com/mcci-catena/Adafruit_BME280_Library.git 
           cp -r Adafruit_BME280_Library /home/runner/Arduino/libraries/
 
       - name: Install platform
