--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -52,7 +52,7 @@ jobs:
         run:
           |
           # common settings - no extra options, skip nothing, all warnings
-          echo "skip-pattern=''" >> $GITHUB_OUTPUT
+          echo "skip-pattern='simple_sensor_bme280'" >> $GITHUB_OUTPUT
           echo "warnings='all'" >> $GITHUB_OUTPUT
 
           # platform-dependent settings - extra board options, board index URLs, skip patterns etc.
@@ -68,10 +68,10 @@ jobs:
           |
           declare -a required_libs=(
             "MCCI LoRaWAN LMIC library@4.1.1"
-            "MCCI Arduino LoRaWAN Library@0.9.2"
+            "MCCI Arduino LoRaWAN Library@0.10.0"
             "MCCI Arduino Development Kit ADK@0.2.2"
             "LoRa Serialization@3.2.1"
-            "ESP32Time@2.0.0")
+            "ESP32Time@2.0.4")
           for i in "${required_libs[@]}"
           do
             arduino-cli lib install "$i"
