--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,12 +22,12 @@ jobs:
           #- esp32:esp32:heltec_wireless_stick:PSRAM=disabled
           #- esp32:esp32:featheresp32
           #- esp32:esp32:adafruit_feather_esp32s2
-
+          - rp2040:rp2040:adafruit_feather:dbgport=Serial
     runs-on: ubuntu-latest
     name: ${{ matrix.board }}
     env:
       GH_TOKEN: ${{ github.token }}
-      run-build: ${{ contains(matrix.board, 'esp32:esp32') || contains(github.event.head_commit.message, 'CI_BUILD_ALL') || contains(github.event.head_commit.message, 'Bump version to') || contains(github.event.head_commit.message, format('{0}', matrix.board)) }}
+      run-build: ${{ contains(matrix.board, 'esp32:esp32') || contains(matrix.board, 'rp2040:rp2040') || contains(github.event.head_commit.message, 'CI_BUILD_ALL') || contains(github.event.head_commit.message, 'Bump version to') || contains(github.event.head_commit.message, format('{0}', matrix.board)) }}
 
     steps:
       - name: Install arduino-cli
@@ -60,6 +60,9 @@ jobs:
             # ESP32
             python -m pip install pyserial
             echo "index-url=--additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json" >> $GITHUB_OUTPUT
+          elif [[ "${{ contains(matrix.board, 'rp2040:rp2040') }}" == "true" ]]; then
+            # RP2040
+            echo "index-url=--additional-urls https://github.com/earlephilhower/arduino-pico/releases/download/global/package_rp2040_index.json" >> $GITHUB_OUTPUT
           fi
 
       - name: Install libraries
@@ -72,7 +75,8 @@ jobs:
             "MCCI Arduino Development Kit ADK@0.2.2"
             "LoRa Serialization@3.2.1"
             "ESP32Time@2.0.4"
-            "ESP32AnalogRead@0.2.1")
+            "ESP32AnalogRead@0.2.1"
+            "Preferences@2.1.0")
           for i in "${required_libs[@]}"
           do
             arduino-cli lib install "$i"
